applications/pipeline/overlays/seaweedfs-networkpolicy-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seaweedfs
  namespace: kubeflow
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - mlflow
      ports:
        - port: 8333
          protocol: TCP
